# CircuitGUI

./: CMakeLists.txt  README.md
docs/: circuitgui-technical-plan.md
src/: main.cpp
src/graph/: graphlayout.cpp  graphlayout.h
src/io/: jsonloader.cpp  jsonloader.h
src/items/: instanceitem.cpp  instanceitem.h  netitem.cpp  netitem.h  portitem.cpp  portitem.h
src/model/: info.h
